--- a/.github/workflows/build_web.yml
+++ b/.github/workflows/build_web.yml
@@ -22,7 +22,7 @@ jobs:
           pub-cache-key: "flutter-pub:os:-:channel:-:version:-:arch:-:hash:" # optional, change this to force refresh cache of dart pub get dependencies
           pub-cache-path: "${{ runner.tool_cache }}/flutter/:channel:-:version:-:arch:" # optional, change this to specify the cache path
       - run: flutter --version
-      - run: cd app && flutter build web --release --base-href /EatSomewhere/
+      - run: cd app && flutter build web --release
 
       - name: Deploy 🚀
         uses: JamesIves/github-pages-deploy-action@v4
