--- a/.github/workflows/build_web.yml
+++ b/.github/workflows/build_web.yml
@@ -28,3 +28,4 @@ jobs:
         uses: JamesIves/github-pages-deploy-action@v4
         with:
           folder: app/build/web/ # The folder the action should deploy.
+          branch: frontend # The branch the action should deploy to.
