--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   json_serializer: ^0.2.0
   shared_preferences: ^2.5.1
   dynamic_color: ^1.7.0
+  http: ^1.3.0
 
 dev_dependencies:
   flutter_test:
