--- a/app/pubspec.yaml
+++ b/app/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   shared_preferences: ^2.5.1
   dynamic_color: ^1.7.0
   http: ^1.3.0
+  sticky_headers: ^0.3.0+2
 
 dev_dependencies:
   flutter_test:
