--- a/.github/workflows/build_web.yml
+++ b/.github/workflows/build_web.yml
@@ -14,7 +14,7 @@ jobs:
       - name: Set up Flutter
         uses: subosito/flutter-action@v2
         with:
-          channel: stable
+          channel: master
           cache: true
           # optional parameters follow
           cache-key: "flutter-:os:-:channel:-:version:-:arch:-:hash:" # optional, change this to force refresh cache
