--- a/.github/workflows/build_web.yml
+++ b/.github/workflows/build_web.yml
@@ -1,10 +1,10 @@
-name: Build web
+name: Compile frontend
 
 on:
   workflow_dispatch:
   push:
     branches: [ main ]
-
+    
 jobs:
   build:
     runs-on: ubuntu-latest
